--- a/index.ipynb
+++ b/index.ipynb
@@ -396,11 +396,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "matrix([[15.],\n",
+       "        [ 5.]])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Code here "
+    "# Code here \n",
+    "X = A_inv.dot(B)\n",
+    "X"
    ]
   },
   {
